# BADA4

./: A320-232.ipynb  MAP_Range.html
BADA/: A320-232.ipynb  weight.ipynb  withdeceleration.ipynb  withdeceleration2.ipynb  withdecelerationE.ipynb  withoutdeceleration.ipynb
BADA/A320/: A320.ipynb
BADA/A320-232/: A320-232.ipynb  A320_mach.ipynb  crossover_altitudes.csv  speed.py  test.ipynb  test.py
BADA/B787/: b787.ipynb
MPC/: 821.html  821.md
pynega2/: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg
pynega2/src/TP/: AircraftIntents.py  AircraftIntents_nowind.py  IntentProcedureAdapter.py  Phase.py  ReadMe  Route.py  TP_main.py  TrajectoryPrediction.py  bspline.py  fileOperations.py  grib.py  plotResults.py  pressure_levels.csv  synonims.py  utilities_TP.py
pynega2/src/TP/input/: A320_EDDF_EMPAX1B_fromADNIS_OFP.xml  A320_example-climb-profile_v1.0.xml  A320_example-descent-profile_v1.0.xml  A320_example-descent-profile_v2.0.xml  B738W26.xml  LE_DATASET_ENR_4_4.xml  LE_DATASET_GEN_2_5.xml  VT1_A320_Descent.xml  VT2_A320_Descent.xml  route _intents.xml  route.xml  route_AIXM.xml  scenario.xml  weatherpoints_dist_test.pkl  weatherpoints_test.pkl
pynega2/src/pyNega2/: bspline.py  estimation.py  guidance.py  integrators.py  model.py  optimisation.py  simulation.py  utilities.py  visualisation.py
pynega2/src/scripts/: batch.py  getweather.py  processResults.py  simulations.py
test/: airspace_evo.html  pid.html  test.py  testjupter.ipynb  潘_论文_V2.docx
test/MILP_test/: milp.md  milp.py
test/NLP_test/: casadi_my.py  readme.md
test/PytorchTest/: tensor.ipynb
test/RL_test/: gym.py
test/ant_test/: ant.md  ant.py
test/bellman_test/: bellman_test.ipynb
test/bluesky_test/: bluesky.html
test/claude_test/atm_bilevel_mpc/: README.md  pyproject.toml  simple_demo.py  test_quick.py
test/claude_test/atm_bilevel_mpc/examples/: basic_simulation.py
test/claude_test/atm_bilevel_mpc/src/: simulation.py
test/claude_test/atm_bilevel_mpc/src/atm_bilevel_mpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/claude_test/atm_bilevel_mpc/src/communication/: cpdlc_interface.py
test/claude_test/atm_bilevel_mpc/src/controllers/: lower_level.py  upper_level.py
test/claude_test/atm_bilevel_mpc/src/models/: aircraft.py
test/claude_test/atm_bilevel_mpc/src/systems/: point_merge.py
test/claude_test/atm_bilevel_mpc/src/utils/: separation_monitor.py
test/claude_test/atm_bilevel_mpc/src/visualization/: plotter.py
test/claude_test/atm_bilevel_mpc/tests/: test_aircraft_model.py
test/cpu_gpu/: cpu_temsor.py
test/curve/: B_spline.md  bspline_bezier.py  curve.py
test/delaunay/: del.py
test/do_mpc/: doMPC.ipynb
test/mpc_test/: ddptest.ipynb  ju.html  moc2.html  mpc.html  mpc_math.html  (+3 more)
(+139 files in other folders)
