# Package information
[metadata]
name = pyNega2
version = 0.2.0
description = TODO
author = Ramon Dalmau
license = ICARUS - UPC
license_file = LICENSE
url = https://gitlab.upc.edu/icarus/projects/pynega2
platforms = unix, linux, osx, cygwin, win32

# Languages compatible with package
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]

# Point to src directory
package_dir =
    =src

# Packages under src directory
packages = find:

# Required packages
install_requires =
    pyBada3 @ git+https://gitlab.upc.edu/icarus/projects/pybada3@pyNega2_compatibility
    numpy
    pygrib
    scipy
    pyproj
    pandas
    geographiclib
    casadi
    matplotlib
    dicttoxml
    xmltodict
    mpi4py
    requests

# Minimum Python version
python_requires = >=3.6

zip_safe = no

[options.packages.find]
where=src

;[options.extras_require]
;testing =
;    pytest>=6.0
;    pytest-cov>=2.0
;    mypy>=0.910
;    flake8>=3.9
;    tox>=3.24
;
;[options.package_data]
;pybada = py.typed
;
;[flake8]
;max-line-length = 160